:whale: InOutManager 增加 getOptional 方法，通过 inOut class 找到对应的 inOut 对象。 #228 EventBusMessage userId 改名为 threadIndex ，threadIndex 主要作用是确定使用哪个线程执行器。